--- a/frontend/src/components/Header/Header.module.scss
+++ b/frontend/src/components/Header/Header.module.scss
@@ -1,5 +1,6 @@
 .header {
   height: 6.4rem;
+  padding: 1.1rem 0rem;
   display: flex;
   justify-content: center;
   box-shadow: var(--light-shadow-color);
