--- a/frontend/src/components/Container/Container.module.scss
+++ b/frontend/src/components/Container/Container.module.scss
@@ -2,5 +2,5 @@
   max-width: 155rem;
   width: 100%;
   margin: 0 auto;
-  padding: 1.1rem var(--layout-padding);
+  padding: 0 var(--layout-padding);
 }
