--- a/frontend/src/app/home/layout.module.scss
+++ b/frontend/src/app/home/layout.module.scss
@@ -9,7 +9,7 @@
   position: sticky;
   top: 8.4rem;
   align-self: flex-start;
-  border: 1px solid red;
+  // border: 1px solid red;
 }
 
 .content {
