Post component added

--- a/frontend/src/components/ColoredLink/ColoredLink.module.scss
+++ b/frontend/src/components/ColoredLink/ColoredLink.module.scss
@@ -1,9 +1,19 @@
-.link {
+.light {
   font-size: inherit;
 
   transition: color var(--transition-duration-fast);
 
   &:hover {
     color: var(--color-secondary);
+  }
+}
+
+.dark {
+  font-size: inherit;
+
+  transition: color var(--transition-duration-fast);
+
+  &:hover {
+    color: var(--color-secondary-dark);
   }
 }
