--- a/frontend/src/app/globals.scss
+++ b/frontend/src/app/globals.scss
@@ -7,6 +7,7 @@
 
   --color-text-dark: rgb(36, 36, 36);
   --color-text-default: rgb(23, 23, 23);
+  --color-text-grey: #444;
   --color-text-light: rgb(87, 87, 87);
 
   --color-grey--light: rgba(0, 0, 0, 0.15);
@@ -24,6 +25,7 @@
 
   --margin-xs: 1rem;
   --margin-sm: 1.5rem;
+  --margin-sm-md: 2.5rem;
   --margin-md: 3.2rem;
 
   --border-radius-sm: 3px;
@@ -33,6 +35,7 @@
 
   --letter-spacing-sm: 0.2rem;
 
+  --font-text-xs: 1.2rem;
   --font-text-small: 1.5rem;
   --font-text-default: 1.6rem;
   --font-text-l: 1.8rem;
@@ -42,7 +45,9 @@
 
   --gap-xs: 0.5rem;
   --gap-sm: 1rem;
+  --gap-sm-plus: 2rem;
   --gap-between: 3.2rem;
+  --gap-md-minus: 4.8rem;
   --gap-md: 7.2rem;
 
   --transition-duration-default: 300ms;
@@ -111,6 +116,17 @@ ol {
   margin-bottom: var(--margin-xs);
 }
 
+.mb-sm {
+  margin-bottom: var(--margin-sm);
+}
+
+.mb-md {
+  margin-bottom: var(--margin-md);
+}
+.md-md-sm {
+  margin-bottom: var(--margin-sm-md);
+}
+
 .mt-sm {
   margin-top: var(--margin-sm);
 }
@@ -148,4 +164,18 @@ ol {
   to {
     opacity: 1;
   }
+}
+
+button {
+  border: none;
+  background-color: transparent;
+  font-family: inherit;
+  color: inherit;
+  font-size: inherit;
+}
+
+.center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
