--- a/frontend/src/app/globals.scss
+++ b/frontend/src/app/globals.scss
@@ -9,6 +9,7 @@
   --color-text-default: rgb(23, 23, 23);
   --color-text-grey: #444;
   --color-text-light: rgb(87, 87, 87);
+  --color-text-lightest: rgb(135, 135, 135);
 
   --color-grey--light: rgba(0, 0, 0, 0.15);
   --color-grey--lightest: rgba(0, 0, 0, 0.1);
@@ -36,6 +37,7 @@
   --letter-spacing-sm: 0.2rem;
 
   --font-text-xs: 1.2rem;
+  --font-text-xs-plus: 1.4rem;
   --font-text-small: 1.5rem;
   --font-text-default: 1.6rem;
   --font-text-l: 1.8rem;
@@ -178,4 +180,27 @@ button {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+// SCROLLBAR
+/* Apply to the element with a scrollbar (e.g., body, div, etc.) */
+.scroll-container {
+  scrollbar-width: thin; /* For Firefox */
+  scrollbar-color: #999 #f5f5f5; /* Thumb color and track color for Firefox */
+}
+
+.scroll-container::-webkit-scrollbar {
+  width: 8px; /* Width of the scrollbar */
+  height: 8px; /* Height of the scrollbar */
+}
+
+.scroll-container::-webkit-scrollbar-thumb {
+  background: #999; /* Scrollbar thumb color */
+  border-radius: 10px; /* Rounded corners */
+  border: 2px solid #f5f5f5; /* Space around thumb for better appearance */
+}
+
+.scroll-container::-webkit-scrollbar-track {
+  background: #f5f5f5; /* Track color */
+  border-radius: 10px; /* Rounded corners for track */
 }
