--- a/frontend/src/app/home/layout.module.scss
+++ b/frontend/src/app/home/layout.module.scss
@@ -1,21 +1,21 @@
 .layout {
-  border: 1px solid green;
+  // border: 1px solid green;
   display: grid;
   grid-template-columns: 24rem 1fr 35rem;
   grid-gap: var(--gap-between);
 }
 
 .sidebar {
-  position: sticky;
+  // position: sticky;
   top: 8.4rem;
   align-self: flex-start;
   // border: 1px solid red;
 }
 
 .content {
-  border: 1px solid pink;
+  // border: 1px solid pink;
 }
 
 .news {
-  border: 1px solid yellow;
+  // border: 1px solid yellow;
 }
