--- a/frontend/src/components/Footer/Footer.module.scss
+++ b/frontend/src/components/Footer/Footer.module.scss
@@ -1,4 +1,5 @@
 .footer {
+  margin-top: 10rem;
   padding: 5rem 0 10rem;
   box-shadow: var(--light-shadow-color-top);
   background-color: var(--color-grey--lightest);
