--- a/frontend/src/components/Title/Title.module.scss
+++ b/frontend/src/components/Title/Title.module.scss
@@ -3,8 +3,13 @@
     font-size: 1.6rem;
   }
 
+  &--xsplus {
+    font-size: 1.8rem;
+  }
+
   &--sm {
     font-size: 2.2rem;
+    font-weight: 500;
   }
 
   &--md {
