--- a/frontend/src/components/Header/Header.module.scss
+++ b/frontend/src/components/Header/Header.module.scss
@@ -8,6 +8,7 @@
   top: 0;
   background-color: rgba(var(--color-primary), 0);
   backdrop-filter: blur(20px);
+  z-index: 500;
 
   &__left {
     display: flex;
