--- a/frontend/src/components/SearchBar/SearchBar.module.scss
+++ b/frontend/src/components/SearchBar/SearchBar.module.scss
@@ -1,9 +1,11 @@
 .form {
   color: var(--color-text-default);
   position: relative;
+  width: 100%;
 
   .searchBar {
     height: 100%;
+    width: 100%;
     color: inherit;
     font-family: inherit;
     font-size: var(--font-text-l);
