--- a/frontend/src/app/globals.scss
+++ b/frontend/src/app/globals.scss
@@ -67,12 +67,12 @@
   }
 }
 
-html,
-body {
+html {
   font-size: 62.5%;
-  max-width: 100vw;
-  // overflow-x: hidden;
-  color-scheme: dark;
+
+  @media (max-width: 1200px) {
+    font-size: 55%;
+  }
 }
 
 body {
@@ -83,6 +83,12 @@ body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  max-width: 100vw;
+  color-scheme: dark;
+
+  &.sidebarIsOpen {
+    overflow-y: hidden;
+  }
 }
 
 .main {
@@ -203,4 +209,24 @@ button {
 .scroll-container::-webkit-scrollbar-track {
   background: #f5f5f5; /* Track color */
   border-radius: 10px; /* Rounded corners for track */
+}
+
+.toggle-btn {
+  transition: color var(--transition-duration-fast);
+  cursor: pointer;
+
+  &:hover {
+    color: var(--color-secondary-dark);
+  }
+
+  svg {
+    height: 100%;
+    font-size: 4rem;
+  }
+
+  display: none;
+
+  @media (max-width: 1000px) {
+    display: block;
+  }
 }
