--- a/frontend/src/components/Logo/Logo.module.scss
+++ b/frontend/src/components/Logo/Logo.module.scss
@@ -12,4 +12,6 @@
   font-size: 2.2rem;
   letter-spacing: var(--letter-spacing-sm);
   border-radius: var(--border-radius-sm);
+  position: relative;
+  z-index: 3000;
 }
