--- a/frontend/src/components/Siderbar/Sidebar.module.scss
+++ b/frontend/src/components/Siderbar/Sidebar.module.scss
@@ -1,10 +1,51 @@
+.sidebarWrapper {
+  position: fixed;
+  @media (max-width: 1000px) {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+    background-color: rgba(black, 0.4);
+    width: 100vw;
+    height: 100vh;
+
+    &.closedSidebar {
+      display: none;
+    }
+  }
+}
+
 .container {
   display: flex;
   flex-direction: column;
   gap: 4.8rem;
+  width: 24rem;
+  padding: 0 0.5rem;
+  position: relative;
+  overflow-x: auto;
 
-  .sidebarWrapper {
-    padding: 0 0.5rem;
+  @media (max-width: 1000px) {
+    background-color: var(--color-primary);
+    padding: 5rem 5rem;
+    width: 34rem;
+    height: 100vh;
+    box-shadow: 5px 0px 10px rgba(0, 0, 0, 0.2);
+    position: fixed;
+    transform: translateX(0%);
+    top: 0%;
+    left: 0%;
+    transition: all 700ms ease-in-out;
+    z-index: 2000;
+
+    &.closedSidebar {
+      transform: translateX(-100%);
+    }
+  }
+
+  .btn {
+    position: absolute;
+    top: 2rem;
+    right: 2rem;
   }
 }
 
